--- a/ClassifiedPrint.Uploader/Views/Shared/_Layout.cshtml
+++ b/ClassifiedPrint.Uploader/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">
+                <a class="navbar-brand">
                     Công cụ bóc tách tin đăng báo giấy
                 </a>
             </div>            
